--- a/RedPandaIDE/settingsdialog/editorfontwidget.ui
+++ b/RedPandaIDE/settingsdialog/editorfontwidget.ui
@@ -90,7 +90,7 @@
       <property name="rightMargin">
        <number>11</number>
       </property>
-      <item row="5" column="0" colspan="2">
+      <item row="3" column="0" colspan="2">
        <widget class="QWidget" name="widget_11" native="true">
         <layout class="QHBoxLayout" name="horizontalLayout_12">
          <property name="leftMargin">
@@ -105,13 +105,6 @@
          <property name="bottomMargin">
           <number>0</number>
          </property>
-         <item>
-          <widget class="QCheckBox" name="chkLigature">
-           <property name="text">
-            <string>Enable ligatures support</string>
-           </property>
-          </widget>
-         </item>
          <item>
           <widget class="QCheckBox" name="chkForceFixedFontWidth">
            <property name="text">
@@ -133,13 +126,6 @@
           </spacer>
          </item>
         </layout>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_9">
-        <property name="text">
-         <string>Line Spacing:</string>
-        </property>
        </widget>
       </item>
       <item row="1" column="0">
@@ -187,6 +173,13 @@
         </layout>
        </widget>
       </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_9">
+        <property name="text">
+         <string>Line Spacing:</string>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="1">
        <widget class="QWidget" name="widget_10" native="true">
         <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -232,6 +225,43 @@
           </spacer>
          </item>
         </layout>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupUnicodeSupportLevel">
+     <property name="title">
+      <string>Unicode support level</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_5">
+      <item>
+       <widget class="QRadioButton" name="rbUnicodeFullCodePoint">
+        <property name="text">
+         <string>Level 1: full code point</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="rbUnicodeContextual">
+        <property name="text">
+         <string>Level 2: enable contextual substitution (ligature)</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="rbUnicodeGrapheme">
+        <property name="text">
+         <string>Level 3: enable grapheme-based shaping</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="rbUnicodeBidirectional">
+        <property name="text">
+         <string>Level 4: enable bidirectional layout</string>
+        </property>
        </widget>
       </item>
      </layout>
