Clean up compiler output charset list
- Remove all except UTF-8 for Unix target
- Remove "System Default" on Unix host - it's definitely UTF-8
- Remove "Unicode" group - cause ICE

--- a/RedPandaIDE/settingsdialog/compilersetoptionwidget.ui
+++ b/RedPandaIDE/settingsdialog/compilersetoptionwidget.ui
@@ -133,7 +133,7 @@
           <item>
            <widget class="QCheckBox" name="chkAutoAddCharset">
             <property name="text">
-             <string>Convert Executable's Charset as</string>
+             <string>Set execution charset to</string>
             </property>
            </widget>
           </item>
